@@ -5,6 +5,7 @@
     * Refactor code to ‘_terminate_daemon_process’ method.
     * Improve explanations in comments and docstrings.
     * Don't set pidfile at all if no path specified to constructor.
+    * Close the PID file after writing.
 
 2009-09-18  Ben Finney  <ben+python@benfinney.id.au>
 
